--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@ catalogs/ucac5tofits
 /plot/build/lib.linux-x86_64-3.10/_plotstuff_c.cpython-310-x86_64-linux-gnu.so
 /util/build/lib.linux-x86_64-3.10/_util.cpython-310-x86_64-linux-gnu.so
 /catalogs/ucac5tofits
+test/results.txt
+test/log.txt
